test: add AUTHORS_URL in Config

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 BASE_URL=https://fakerestapi.azurewebsites.net
+AUTHORS_URL=https://fakerestapi.azurewebsites.net/api/v1/Authors
+
 SWAGGER_URL=https://fakerestapi.azurewebsites.net/swagger/v1/swagger.json
